--- a/HRISim/hrisim_tmule/tmule/tiago.yaml
+++ b/HRISim/hrisim_tmule/tmule/tiago.yaml
@@ -23,31 +23,10 @@ init_cmd: |
   source "$HOME/.bashrc"
   export_default CATKIN_WS "$HOME/ros_ws"
 
-  # robot specific arguments
-  export_default TIAGO_EE "false"
-  export_default TIAGO_TYPE "iron"
-  export_default TIAGO_x "-6.0"
-  export_default TIAGO_y "0.0"
-  export_default TIAGO_z "0.2"
-  export_default TIAGO_R "0.0"
-  export_default TIAGO_P "0.0"
-  export_default TIAGO_Y "0.0"
-
-  # world arguments
-  export_default WORLD "maze_wH"
-  export_default GZ_GUI "false"
-
-  # navigation specific arguments
-  export_default GLOBAL_PLANNER "global_planner"
-  export_default LOCAL_PLANNER "teb"
-  export_default LOCALIZATION "amcl"
-  export_default CONFIG_BASE_PATH "$(rospack find tiago_navigation)"
-  export_default MAP "$HOME/.pal/tiago_maps/configurations/maze"
-
   # PNP specific arguments
-  export_default PNP_PLANS "$CATKIN_WS/src/myTIAGo/mytiago_plans"
-  export_default PNP_ACTIONS "$CATKIN_WS/src/myTIAGo/mytiago_actions"
-  export_default PNP_CONDITIONS "$CATKIN_WS/src/myTIAGo/mytiago_conditions"
+  export_default PNP_PLANS "$CATKIN_WS/src/HRISim/hrisim_plans"
+  export_default PNP_ACTIONS "$CATKIN_WS/src/HRISim/hrisim_actions"
+  export_default PNP_CONDITIONS "$CATKIN_WS/src/HRISim/hrisim_conditions"
 
 windows:
   - name: roscore
@@ -59,8 +38,8 @@ windows:
     tags: ['core']
     panes:
       - 'roslaunch pnp_ros pnp_ros.launch plans_folder:=$PNP_PLANS actions_folder:=$PNP_ACTIONS conditions_folder:=$PNP_CONDITIONS'
-      - 'cd ~/ros_ws/src/myTIAGo/mytiago_plans; echo "Start your plan here, e.g.\n python Inspection.py"'
+      - 'cd ~/ros_ws/src/HRISim/hrisim_plans; echo -e "\033[1;31mStart your plan here: python PassByTheCentre.py nRepetition Bagname, e.g.\n python PassByTheCentre.py 8 robotPriority\033[0m"'
   - name: rviz
     tags: ['viz']
     panes:
-      - 'rviz -d "$(rospack find mytiago_navigation)/config/rviz/tiago_rviz_sim.rviz" --fixed-frame map'
+      - 'rviz -d "$(rospack find hrisim_rviz)/config/rviz/tiago_rviz.rviz" --fixed-frame map'
